force-app/main/default/objects/CVE_Opportunity_Contact__c/CVE_Opportunity_Contact__c.object-meta.xml
<CustomObject>
    <description>SAL26-564</description>
    <label>CVE Opportunity &amp; Contact</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>CVE Opportunity &amp; Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CVE Opportunities &amp; Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>