force-app/main/default/objects/CVE_Opportunity_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAL26-640: Contact lookup to hold stakeholder engaged on related CVE Engagement record.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CVE Opportunities &amp; Contacts</relationshipLabel>
    <relationshipName>CVE_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>