force-app/main/default/objects/CVE_Opportunity_Contact__c/fields/CVE_Engagement__c.field-meta.xml
<CustomField>
    <fullName>CVE_Engagement__c</fullName>
    <description>SAL26-640: Holds related Economics (CVE) Engagement record.</description>
    <label>Economics (CVE) Engagement</label>
    <referenceTo>CVE_Engagement__c</referenceTo>
    <relationshipLabel>CVE Opportunities &amp; Contacts</relationshipLabel>
    <relationshipName>CVE_Opportunities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>