force-app/main/default/objects/CVE_Opportunity_Contact__c/fields/Open_Opportunity_Amount_TCV__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunity_Amount_TCV__c</fullName>
    <description>SAL26-641: shows opportunity Amount TCV if opportunity is open</description>
    <formula>IF(
AND(Opportunity__c != null, !Opportunity__r.IsClosed),
Opportunity__r.Amount ,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Opportunity Amount (TCV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>