force-app/main/default/objects/CVE_Opportunity_Contact__c/fields/OpenOpportunityAmount_ACV__c.field-meta.xml
<CustomField>
    <fullName>OpenOpportunityAmount_ACV__c</fullName>
    <description>SAL25-641: shows amount ACV if opportunity is open</description>
    <formula>IF(
 AND(Opportunity__c != null, !Opportunity__r.IsClosed),
 Opportunity__r.ACV_Amount__c,
 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Opportunity Amount (ACV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>