force-app/main/default/objects/CVE_Opportunity_Contact__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAL26-640: Opportunity lookup to hold opportunity linked with related CVE Engagement record.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CVE Opportunities &amp; Contacts</relationshipLabel>
    <relationshipName>CVE_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>