force-app/main/default/objects/CVE_Opportunity_Contact__c/validationRules/Contact_Account_match_with_CVE_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Account_match_with_CVE_Account</fullName>
    <active>true</active>
    <description>SAL26-564</description>
    <errorConditionFormula>AND(
NOT($Setup.ShGl_DisableBusinessLogic__c.Disable_CVE_Enagement_Validation_Rules__c),
Contact__c != null, 
Contact__r.AccountId != null,
Contact__r.AccountId != CVE_Engagement__r.Account__c
)</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Contact&apos;s Account should match with CVE Engagement&apos;s Account.</errorMessage>
</ValidationRule>